--- a/alogin.html
+++ b/alogin.html
@@ -21,7 +21,7 @@
 	<div class="loginbox">
     <img src="assets/admin.png" class="avatar">
         <h1>Login Here</h1>
-        <form action="process/aprocess.php" method="POST">
+        <form action="aprocess.php" method="POST">
             <p>Email</p>
             <input type="text" name="mailuid" placeholder="Enter Email Address" required="required">
             <p>Password</p>
